--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,10 @@ header {
     background-color: var(--main-bg-color);
 }
 
+header h1 {
+    margin: auto;
+}
+
 nav {
     display: flex;
     justify-content: center;
@@ -101,6 +105,7 @@ nav a:hover {
     background-color: var(--main-bg-color);
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow);
+    max-width: 400px;
 }
 
 .service {
@@ -110,6 +115,16 @@ nav a:hover {
     background-color: var(--main-bg-color);
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow);
+    max-width: 400px;
+}
+
+.service h1 {
+    text-align: center;
+}
+
+.service img {
+    display: block;
+    margin: 0 auto;
 }
 
 #news {
@@ -120,6 +135,7 @@ nav a:hover {
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow);
     text-align: center;
+    max-width: 600px;
 }
 
 .contactbox {
@@ -130,10 +146,17 @@ nav a:hover {
     background-color: var(--main-bg-color);
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow);
+    max-width: 400px;
 }
 
 .contactbox a {
     color: var(--main-fg-color);
+}
+
+#contactform {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #about {
@@ -159,7 +182,13 @@ input {
     background-color: var(--tertiary-bg-color);
 }
 
-button {
+textarea {
+    color: var(--main-fg-color);
+    background-color: var(--tertiary-bg-color);
+    border-radius: 5px;
+}
+
+.button {
     background-color: var(--tertiary-bg-color);
     color: var(--main-fg-color);
     font-family: var(--primary-font);
