--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@
     --secondary-font: Arial;
     --border-radius: 10px;
     --box-shadow: 10px 10px 3px rgba(0, 0, 0, 0.1);
+
+    /* Panels are all boxes between the banner and footer (exclusive)  */
+    --panel-margin: 20px;
+    --panel-padding: 20px;
 }
 
 * {
@@ -21,6 +25,12 @@ body {
 }
 
 @media (max-width: 750px) {
+    :root {
+        --panel-margin: 5px;
+        --panel-padding: 5px;
+        --box-shadow: none;
+    }
+
     header {
         flex-direction: column;
         align-items: center;
@@ -54,10 +64,9 @@ nav {
 }
 
 nav a {
-    padding: 10px 20px;;
+    padding: 10px 20px;
     text-decoration: none;
     font-weight: bold;
-    color: var(--main-fg-color);
     font-family: var(--primary-font);
 }
 
@@ -81,93 +90,42 @@ nav a:hover {
     margin: 20px 0px;
 }
 
-#services {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin: 20px;
-}
-
-#newsandcontact {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-.servicepreview {
-    padding: 20px;
-    margin: 20px;
-    flex: 1 1 300px;
-    text-align: center;
-    background-color: var(--main-bg-color);
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
+.panel {
     max-width: 400px;
-}
-
-.service {
-    padding: 20px;
-    margin: 20px;
     flex: 1 1 300px;
     background-color: var(--main-bg-color);
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow);
-    max-width: 400px;
+    padding: var(--panel-padding);
+    margin: var(--panel-margin);
 }
 
-.service h1 {
+.wrappingcontainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.centeredtext {
     text-align: center;
 }
 
-.service img {
+.panel img {
     display: block;
     margin: 0 auto;
 }
 
-#news {
-    padding: 20px;
-    margin: 50px;
-    flex: 1 1 200px;
-    background-color: var(--main-bg-color);
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
-    text-align: center;
-    max-width: 400px;
-}
-
-.contactbox {
-    padding: 20px;
-    margin: 50px;
-    flex: 1 1 200px;
-    text-align: center;
-    background-color: var(--main-bg-color);
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
-    max-width: 400px;
-}
-
-.contactbox a {
+a {
     color: var(--main-fg-color);
 }
 
 #contactform {
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 #about {
-    padding: 20px;
-    margin: 20px;
-    background-color: var(--main-bg-color);
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
-}
-
-#contact {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    max-width: 100%;
 }
 
 .formgroup {
@@ -201,6 +159,7 @@ h1 {
 
 footer {
     font-weight: bold;
+    margin: 10px;
 }
 
 .emaillabel::before {
